[package]
name = "frozen-core"
edition = "2024"
version = "0.0.2"
license = "Apache-2.0"
exclude = ["shell.nix"]
keywords = ["frozen lab", "frozen core"]
repository = "https://github.com/frozen-lab/frozen-core"
description = "Custom implementations and core utilities for frozen codebases"

[features]
default = []
ff = ["libc"]
fm = ["libc"]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.178", optional = true }

[dev-dependencies]
tempfile = "3.20.0"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2.178"
