[package]
name = "frozen-core"
edition = "2024"
version = "0.0.5"
exclude = ["shell.nix"]
license = "MIT OR Apache-2.0"
keywords = ["frozen-lab", "frozen-core"]
repository = "https://github.com/frozen-lab/frozen-core"
description = "Custom implementations and core utilities for frozen codebases"

[features]
error = []
hints = []
ffile = ["libc", "error", "hints"]
fmmap = ["libc", "error", "hints"]
default = ["error", "hints", "ffile", "fmmap"]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.178", optional = true }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2.178"
